--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cors": "^2.8.6",
     "express": "^5.2.1",
+    "youtube-dl-exec": "^3.1.1",
     "yt-dlp-exec": "^1.0.2"
   },
   "devDependencies": {
